--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,10 +15,11 @@ jobs:
     # - image: circleci/postgres:9.4
 
     working_directory: ~/repo
-
+git
     environment:
       # Customize the JVM maximum heap limit
       MAVEN_OPTS: -Xmx3200m
+      TERM: dumb
 
     steps:
     - checkout
