--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,6 @@ jobs:
     # run tests!
     - run: mvn test
 
-
   build:
     docker:
     # specify the version you desire here
@@ -79,7 +78,7 @@ jobs:
         key: v1-dependencies-{{ checksum "pom.xml" }}
 
     # run tests!
-    - run: mvn build
+    - run: mvn package
 
 
   deploy:
