--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,11 +13,6 @@ jobs:
 
     - image: circleci/postgres:11.2
 
-    # Specify service dependencies here if necessary
-    # CircleCI maintains a library of pre-built images
-    # documented at https://circleci.com/docs/2.0/circleci-images/
-    # - image: circleci/postgres:9.4
-
     working_directory: ~/repo
 
     environment:
@@ -27,6 +22,21 @@ jobs:
 
     steps:
     - checkout
+      - run: sudo apt-get update
+      - run: sudo apt-get install postgresql-client-11.2
+      - run: whoami
+      - run: |
+          psql \
+          -d $TEST_DATABASE_URL \
+          -c "CREATE TABLE test (name char(25));"
+      - run: |
+          psql \
+          -d $TEST_DATABASE_URL \
+          -c "INSERT INTO test VALUES ('John'), ('Joanna'), ('Jennifer');"
+      - run: |
+          psql \
+          -d $TEST_DATABASE_URL \
+          -c "SELECT * from test"
 
     # Download and cache dependencies
     - restore_cache:
