--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,11 +51,14 @@ jobs:
     docker:
     # specify the version you desire here
     - image: circleci/openjdk:8-jdk
+      environment:
+        TEST_DATABASE_URL: jdbc:postgresql://localhost:5432/postgres
 
-    # Specify service dependencies here if necessary
-    # CircleCI maintains a library of pre-built images
-    # documented at https://circleci.com/docs/2.0/circleci-images/
-    # - image: circleci/postgres:9.4
+    - image: circleci/postgres:11.2
+      environment:
+        POSTGRES_USER: postgres
+        POSTGRES_DB: postgres
+        POSTGRES_PASSWORD: postgres
 
     working_directory: ~/repo
 
