--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-server.port=8060
+server.port=8080
 server.servlet.contextPath=/glearn
-spring.application.name=football-service
+spring.application.name=glearn
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.show-sql=true
@@ -9,8 +9,9 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 
 spring.jpa.properties.hibernate.default_schema=glearn
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create
 spring.jpa.show-sql = true
+spring.datasource.initialization-mode=always
 
 # Disable feature detection by this undocumented parameter. Check the org.hibernate.engine.jdbc.internal.JdbcServiceImpl.configure method for more details.
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
