--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 
 spring.jpa.properties.hibernate.default_schema=glearn
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create
 spring.jpa.show-sql = true
 spring.datasource.initialization-mode=always
 
