--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,12 @@
             <artifactId>wdtk-client</artifactId>
             <version>0.9.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.199</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
