--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -3,3 +3,7 @@ hibernate.default_schema=TEST
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url= jdbc:h2:mem:myDb;DB_CLOSE_DELAY=-1
 spring.jpa.hibernate.ddl-auto=create-drop
+
+# App Properties
+glearn.app.jwtSecret=jwtGlearnSecretKey
+glearn.app.jwtExpiration=86400
